2008-08-03  Koji Arai  <arai@users.sourceforge.jp>

	* src/header.c (convert_filename): Fixed a bug:
	If the utf8 is specified for the --system-kanji-code and the path
	separator is used with the backslash (0x5c) in archive (level 0
	header is used 0x5c as path separator), when extracting, it has been
	converted to the U+00A5 (yen sign) instead of the slash (0x2f).

2008-06-24  Koji Arai  <arai@users.sourceforge.jp>

	* Hacking_of_LHa: updated.

2008-05-14  Koji Arai  <arai@users.sourceforge.jp>

	* src/lhext.c (extract_one): The -t command should not affect extracting file attributes.

2008-05-02  Koji Arai  <arai@users.sourceforge.jp>

	* added a long option --debug=dumplzss which display debugging information for the LZSS.

2008-03-08  Koji Arai  <arai@users.sourceforge.jp>

	* src/lhext.c (add_dirinfo): no longer suppose that contents of the LZH archive is sorted by pathname.

	* tests/lha-test18: added tests for above.

	* src/lharc.c (parse_suboption): added debugging option `--debug=nosort' and `--debug=norecursion'
	for above tests.

	* src/lha.h: added two global variables for above options: sort_contents, recursive_archiving;

	* src/lharc.c (init_variable): ditto.
	(sort_files): no sort arguments with --debug=nosort.
	(find_files): no sort directory entries with --debug=nosort.

	* src/lhadd.c (append_it): non-sorted and non-recursive archiving with --debug=nosort and --debug=norecursion.

	* src/lhadd.c (remove_one): should use the message() instead of printf().

2008-03-07  Koji Arai  <arai@users.sourceforge.jp>

	* man/lha.1: correct the description about the -m command.

2008-03-04  Koji Arai  <arai@users.sourceforge.jp>

	* man/lha.1: changed a little. the BUGS section was removed.

	* man/lha.1: correct English by Stanislav Brabec. Thanks.

2008-03-02  Koji Arai  <arai@users.sourceforge.jp>

	* src/getopt_long.c (has_argument_short): should treat "-ab" as "-a -b"
	for shortopts="-a[0123]b".

2008-03-02  Koji Arai  <arai@users.sourceforge.jp>
