@@ -1,3 +1,11 @@
+2008-08-04  Koji Arai  <arai@users.sourceforge.jp>
+
+	* src/larc.c (decode_start_lz5): should use the dtext[] instead of the text[].
+
+	* src/lha.h (dtext): defined as global variable.
+
+	* src/slide.c (decode): ditto.
+
 2008-08-03  Koji Arai  <arai@users.sourceforge.jp>
 
 	* src/header.c (convert_filename): Fixed a bug:
